Fixed panel collapsing

--- a/css/pinrate.css
+++ b/css/pinrate.css
@@ -395,7 +395,7 @@ body {
     /* .map_position_c .DGControlsCopyright {
         right: 777px !important;
     } */
-.map_position_d {
+.map_position_e {
     left: 700px;
 }
 .map_position_d {
